FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 918 on 30 oct 2010

* Modified relatives lines in FamilyPanel
* Added email (@) from RESI tag to descendant lista
* Bugfixes

Release 913 on 21 oct 2010

* Multiple name editing serious bug fixed

Release 910 on 21 oct 2010

* Special handling added for Name types / and (
* Added list report for images

Release 903 on 19 oct 2010

* Gay marriages possibility added
* Bug fixes

Release 895 on 17 oct 2010

* Improvements of managing of relative notices
* Fixes to needle manager
* DropDown menu fix
* Added sql function to tools

Release 870 on 12 oct 2010

* Usability changes to menu and dialogs
* Refactoring of hiski import

Release 850 on 7 oct 2010

* Hiski pane opening/closing refactored
* Delete person command added to drop down menu

Release 846 on 6 oct 2010

* Hiski import refactored
* Some statistics added

Release 840 on 5 oct 2010

* Refactored Hiski kastetut and vihityt
* Added genealogy data statistics

Release 830 on 1 oct 2010

* fixed bug with search criteria

Release 824 on 28 sep 2010

* Refactored Hiski kastetut import

Release 820 on 28 sep 2010

* descendant lista (excel) improvements
* hiski-import for kastetut designing

Release 810 on 25 sep 2010

* Wiki-addresses modified
* Adjusted report details
* Reset types list at start of SearchCriteria
* Ask to overwrite the file at save as
* Added check before dropping family database (schema)
* Fixes to needle management
* Fix to login failure message
* Gedcom import fixes

Release 800 on 21 sep 2010

* Hiski import fixed to lower surety for notices already existing and ignoring existing relations
* Report settings for surety to include added
* Replaced TODO with UNKN (Unknown) that now shows on db-view all persons who have UNKN notices
 

Release 794 on 18 sep 2010
