@@ -2,6 +2,12 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 922 on 8 nov 2010
+
+* Added check to prevent update of identical consecutive names
+  or occupations. Possibly an unresolved bug may create such
+* Fixed bug with view manager  
+
 Release 918 on 30 oct 2010
 
 * Modified relatives lines in FamilyPanel
